# C_Labs

./: .gitignore
1/: 1.c  2.c  3.c
10/: CMakeLists.txt
10/geometry/: array.c  array.h  geometry.c  geometry.h
10/handlers/: inputHandler.c  inputHandler.h
10/src/: main.c  utils.c  utils.h
11/: CMakeLists.txt
11/Deque/: deque.c  deque.h
11/Eval/: eval.c  eval.h
11/Handlers/: file.c  file.h  input.c  input.h
11/List/: list.c
11/Tasks/: tasks.c  tasks.h
11/src/: main.c
12/: CMakeLists.txt
12/Deque/: deque.c  deque.h
12/Handlers/: input.h
12/Item/: item.c  item.h
12/List/: list.h
12/Queue/: queue.c  queue.h
12/Tasks/: tasks.c  tasks.h
12/src/: main.c
13/: main.c  tree.c  tree.h  validators.c  validators.h
14/: CMakeLists.txt
14/BinaryTree/: BTree.c  BTree.h
14/List/: list.c  list.h
14/src/: main.c
2/: 1.c  2.c  3.c
3/: 1.c  2.c  3.c
3/utils/: inputHandlers.c  inputHandlers.h  types.h
4/: 1.c  2.c  3.c
5/: 1.c  2.c  3.c  CMakeLists.txt
5/utils/: inputHandlers.c  inputHandlers.h  types.h
6/: 1.c  2.c  3.c
6/utils/: array.c  array.h  inputHandlers.c  inputHandlers.h  types.h
7/: 1.c  2.c  3.c
8/: 1.c  CMakeLists.txt  README.rst  main.c
8/array/: array.c  array.h
8/src/: 2.c  3.c  4.c  main.c
8/utils/: fileHandler.c  fileHandler.h  inputHandler.c  inputHandler.h
9/: CMakeLists.txt
9/src/: 1.c  2.c  3.c  main.c
9/utils/: fileHandler.c  fileHandler.h
